# Support-CRM

./: .gitignore  README.md  support-crm-full-spec.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  script.py  security.py
backend/app/routers/: auth.py  tickets.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CreateTicketModal.jsx  SkeletonRows.jsx  StatusBadge.jsx  Toast.jsx  TopBar.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Skeleton.jsx  Textarea.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  TicketDetailPage.jsx  TicketListPage.jsx
