[project]
name = "support-crm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
